Fix pc img jumping at width 768px

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -79,7 +79,7 @@
   }
 }
 
-@media (max-width: 770px) {
+@media (max-width: 765px) {
   .pc {
     position: relative;
     bottom: 350px;
